--- a/apps.properties
+++ b/apps.properties
@@ -18,8 +18,10 @@ jpeg-dev=libjpeg62-turbo-dev
 png=libpng12-0
 png-dev=libpng12-dev
 maven=maven
+gstreamer=gstreamer1.0-libav
+gstreamergood=gstreamer1.0-plugins-good
+zsh=zsh
 
-## Pour Java , c'est l'adresse complète de download qui doit être fournie
 [JAVA]
 java7=http://download.oracle.com/otn-pub/java/jdk/7u79-b15/jdk-7u79-linux-x64.tar.gz
 java8=http://download.oracle.com/otn-pub/java/jdk/8u73-b02/jdk-8u73-linux-x64.tar.gz
@@ -38,10 +40,6 @@ postrges=postgresql
 postgres-dev=postgresql-server-dev-all
 pgadmin=pgadmin3
 
-## Dépendences Clojure (Optionneles)
-[CLOJURE]
-clojure=clojure1.6
-
 ## On fournit chaqe fois l'adresse complète de téléchargement
 ## Commenter ou décommenter pour installer ou non.
 [DEV-TOOLS]
@@ -52,6 +50,15 @@ android-studio=https://dl.google.com/dl/android/studio/ide-zips/1.5.1.0/android-
 atom=https://github.com/atom/atom/releases/download/v1.5.3/atom-amd64.deb
 sql-developer=sqldeveloper-4.1.3.20.78-no-jre.zip
 visual-paradigm=http://www.visual-paradigm.com/downloads/vp/Visual_Paradigm_Linux64.sh
-#lein=https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
+lein=https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
+ohmyzsh=https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh
 
+[MEDIA]
+vlc=vlc
+ffmpeg=ffmpeg
 
+[MOZILLA]
+firefox=firefox
+thunderbird=thunderbird
+
+[SIPS]
