--- a/apps.properties
+++ b/apps.properties
@@ -21,6 +21,7 @@ maven=maven
 gstreamer=gstreamer1.0-libav
 gstreamergood=gstreamer1.0-plugins-good
 zsh=zsh
+ttf-ancient-fonts=ttf-ancient-fonts
 
 [JAVA]
 java7=http://download.oracle.com/otn-pub/java/jdk/7u79-b15/jdk-7u79-linux-x64.tar.gz
