--- a/apps.properties
+++ b/apps.properties
@@ -47,6 +47,9 @@ pgadmin=pgadmin3
 netbeans=http://download.netbeans.org/netbeans/8.1/final/bundles/netbeans-8.1-javaee-linux.sh
 pycharm=https://download.jetbrains.com/python/pycharm-community-5.0.4.tar.gz
 intellij=https://download.jetbrains.com/idea/ideaIC-15.0.4.tar.gz
+#itellij14Ultimate:https://download.jetbrains.com/idea/ideaIU-14.1.6.tar.gz
+#intellij13 ultimate:http://download.jetbrains.com/idea/ideaIU-13.1.6.tar.gz
+
 android-studio=https://dl.google.com/dl/android/studio/ide-zips/1.5.1.0/android-studio-ide-141.2456560-linux.zip
 atom=https://github.com/atom/atom/releases/download/v1.5.3/atom-amd64.deb
 sql-developer=sqldeveloper-4.1.3.20.78-no-jre.zip
