--- a/apps.properties
+++ b/apps.properties
@@ -22,10 +22,14 @@ gstreamer=gstreamer1.0-libav
 gstreamergood=gstreamer1.0-plugins-good
 zsh=zsh
 ttf-ancient-fonts=ttf-ancient-fonts
+gvfs-bin=gvfs-bin
 
-[JAVA]
-java7=http://download.oracle.com/otn-pub/java/jdk/7u79-b15/jdk-7u79-linux-x64.tar.gz
-java8=http://download.oracle.com/otn-pub/java/jdk/8u73-b02/jdk-8u73-linux-x64.tar.gz
+[DEBIAN_REPO]
+backports=backports_repo =deb http://http.debian.net/debian jessie-backports main
+
+#[JAVA]
+#java7=http://download.oracle.com/otn-pub/java/jdk/7u79-b15/jdk-7u79-linux-x64.tar.gz
+#java8=http://download.oracle.com/otn-pub/java/jdk/8u73-b02/jdk-8u73-linux-x64.tar.gz$
 
 ## Les application de base installée via apt-get
 ## On fourni le nom du package
@@ -41,6 +45,9 @@ postrges=postgresql
 postgres-dev=postgresql-server-dev-all
 pgadmin=pgadmin3
 
+[COUCHBASE]
+couchbase=http://packages.couchbase.com/releases/4.0.0/couchbase-server-community_4.0.0-debian7_amd64.deb
+
 ## On fournit chaqe fois l'adresse complète de téléchargement
 ## Commenter ou décommenter pour installer ou non.
 [DEV-TOOLS]
@@ -52,7 +59,7 @@ intellij=https://download.jetbrains.com/idea/ideaIC-15.0.4.tar.gz
 
 android-studio=https://dl.google.com/dl/android/studio/ide-zips/1.5.1.0/android-studio-ide-141.2456560-linux.zip
 atom=https://github.com/atom/atom/releases/download/v1.5.3/atom-amd64.deb
-sql-developer=sqldeveloper-4.1.3.20.78-no-jre.zip
+#sql-developer=sqldeveloper-4.1.3.20.78-no-jre.zip
 visual-paradigm=http://www.visual-paradigm.com/downloads/vp/Visual_Paradigm_Linux64.sh
 lein=https://raw.githubusercontent.com/technomancy/leiningen/stable/bin/lein
 ohmyzsh=https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh
