--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/config.py
+/sips-config.py
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
